# family-tree

./: .gitignore  README.md  pyproject.toml
family_tree/: draw.py  family_tree.py
tests/: test_family_tree.py
